# solari

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.cast  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py
examples/: dream_demo.py  quickstart.py  workspace_demo.py
solari/: __init__.py  agent.py  cli.py  dream.py  ingest.py  query.py  workspace.py
starter-minds/biology/: index.faiss  manifest.json
starter-minds/cybersecurity/: index.faiss  manifest.json
starter-minds/physics/: index.faiss  manifest.json
starter-minds/programming/: index.faiss  manifest.json
starter-minds/python_best_practices/: index.faiss  manifest.json
tests/: test_basic.py
