[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solari-ai"
version = "0.1.0"
description = "The Deep Knowledge Engine — Turn anything into a searchable knowledge brain"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [{name = "Solari Systems", email = "mark@solarisystems.net"}]
keywords = ["knowledge-base", "faiss", "rag", "cognitive-architecture", "cross-domain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
youtube = ["yt-dlp>=2023.0.0"]
pdf = ["pymupdf>=1.22.0"]
all = ["yt-dlp>=2023.0.0", "pymupdf>=1.22.0"]

[project.scripts]
solari = "solari.cli:main"

[project.urls]
Homepage = "https://solarisystems.net"
Repository = "https://github.com/SolariResearch/solari"
Issues = "https://github.com/SolariResearch/solari/issues"
